--- a/ui/index.html
+++ b/ui/index.html
@@ -10,6 +10,8 @@
         <br>
         <div class="center text-big bold">
             Hi! I am Varshini.
+            </div>
+            <div>
             My first webapp
         </div>
         <script type="text/javascript" src="/ui/main.js">
