[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,8 +10,8 @@
         <br>
         <div class="center text-big bold">
             Hi! I am Varshini.
-            </div>
-            <div>
+        </div>
+        <div class="center text-big bold">
             My first webapp
         </div>
         <script type="text/javascript" src="/ui/main.js">
