[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -12,7 +12,7 @@
             Hi! I am Varshini.
         </div>
         <div class="center text-big bold">
-            My first webapp
+            This is my first webapp
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
